--- a/yes_page.html
+++ b/yes_page.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knew you would say yes!</title>
+    <title>Knew you would say yes! 💖</title>
     <link rel="stylesheet" href="./yes_style.css">
 </head>
 <body>
+
+    <div class="hearts"></div>
+
     <div class="container">
-        <h1 class="header_text">Knew you would say yes!</h1>
+        <h1 class="title">Knew you would say yes! 💖</h1>
+
         <div class="gif_container">
-            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdDFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif">
+            <img src="./assets/valentine.gif" alt="valentine gif">
         </div>
+
+        <p class="invite_text">
+            Stasera Cars insieme? 🍿🎬<br>
+            Anche se siamo lontani, lo guardiamo in chiamata 💕
+        </p>
+
+        <a 
+          class="confirm_btn" 
+          href="https://wa.me/?text=Stasera%20Cars%20insieme%3F%20🍿🎬%20Facciamo%20chiamata%3F%20💖"
+          target="_blank">
+          Sì, a che ora? 💬
+        </a>
     </div>
+
 </body>
 </html>
