--- a/yes_page.html
+++ b/yes_page.html
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-    <div class="hearts"></div>
-
     <div class="container">
-        <h1 class="title">Knew you would say yes! 💖</h1>
+        <h1 class="header_text">Knew you would say yes! 💖</h1>
 
         <div class="gif_container">
             <img src="./assets/valentine.gif" alt="valentine gif">
@@ -19,15 +17,8 @@
 
         <p class="invite_text">
             Stasera Cars insieme? 🍿🎬<br>
-            Anche se siamo lontani, lo guardiamo in chiamata 💕
+            Anche se lontani, lo guardiamo in chiamata 💕
         </p>
-
-        <a 
-          class="confirm_btn" 
-          href="https://wa.me/?text=Stasera%20Cars%20insieme%3F%20🍿🎬%20Facciamo%20chiamata%3F%20💖"
-          target="_blank">
-          Sì, a che ora? 💬
-        </a>
     </div>
 
 </body>
