--- a/yes_page.html
+++ b/yes_page.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knew you would say yes! 💖</title>
+    <title>It was always yes 💖</title>
     <link rel="stylesheet" href="./yes_style.css">
 </head>
 <body>
 
     <div class="container">
-        <h1 class="header_text">Knew you would say yes! 💖</h1>
+        <h1 class="header_text"> Sapevo che avresti detto sì 💖</h1>
+
+        <p class="sub_text">E ora abbiamo un appuntamento ufficiale.</p>
 
         <div class="gif_container">
             <img src="./assets/valentine.gif" alt="valentine gif">
         </div>
 
         <p class="invite_text">
-            Stasera Cars insieme? 🍿🎬<br>
+            Stasera Cars insieme? 🏎️🍿🎬<br>
             Anche se lontani, lo guardiamo in chiamata 💕
         </p>
     </div>
