--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +7,27 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="bg-hearts" aria-hidden="true"></div>
+
   <main class="card">
-    <div class="badge">💘</div>
+    <div class="badge" aria-hidden="true">💘</div>
 
     <h1>Will you be my Valentine?</h1>
-    <p class="subtitle">Be honest… but choose wisely 😌</p>
+    <p class="subtitle">
+      Be honest… but choose wisely 😌<br>
+      mi raccomando🥺
+    </p>
 
     <div class="gif_container">
       <img src="./assets/ask.gif" alt="Cute GIF">
     </div>
 
     <div class="buttons">
-      <button class="yes-button" onclick="handleYesClick()">Yes</button>
-      <button class="no-button" onclick="handleNoClick()">No</button>
+      <button class="yes-button" onclick="handleYesClick()">Yes 💖</button>
+      <button class="no-button" onclick="handleNoClick()">No 🙈</button>
     </div>
 
+    <p class="tip">Tip: the red button is… slippery 😈</p>
     <p id="hint" class="hint" aria-live="polite"></p>
   </main>
 
