--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Will you be my Valentine?</h1>
     <p class="subtitle">
       Be honest… but choose wisely 😌<br>
-      mi raccomando🥺
+      Mi raccomando eh… non fare il duro 🥺😏
     </p>
 
     <div class="gif_container">
@@ -27,7 +27,7 @@
       <button class="no-button" onclick="handleNoClick()">No 🙈</button>
     </div>
 
-    <p class="tip">Tip: the red button is… slippery 😈</p>
+    <p class="tip">Tip: il tasto rosso è solo scena  😈</p>
     <p id="hint" class="hint" aria-live="polite"></p>
   </main>
 
